--- a/demo/package.json
+++ b/demo/package.json
@@ -11,38 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
+    "@angular/animations": "^12.2.8",
     "@angular/cdk": "^11.0.3",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/elements": "^11.2.14",
+    "@angular/common": "^12.2.8",
+    "@angular/compiler": "^12.2.8",
+    "@angular/core": "^12.2.8",
+    "@angular/elements": "^12.2.8",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^11.2.14",
+    "@angular/forms": "^12.2.8",
     "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
+    "@angular/platform-browser": "^12.2.8",
+    "@angular/platform-browser-dynamic": "^12.2.8",
+    "@angular/router": "^12.2.8",
     "@formio/angular-material": "^2.0.0",
     "@formio/angular": "^5.0.0-rc.4",
     "formiojs": "^4.12.3",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "^0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.14",
-    "@angular/cli": "^11.2.14",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/language-service": "^11.2.14",
+    "@angular-devkit/build-angular": "^12.2.8",
+    "@angular/cli": "^12.2.8",
+    "@angular/compiler-cli": "^12.2.8",
+    "@angular/language-service": "^12.2.8",
     "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.14",
     "codelyzer": "^6.0.1",
     "jasmine-core": "^3.6.0",
     "jasmine-spec-reporter": "^6.0.0",
-    "karma": "^5.2.3",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -50,7 +50,7 @@
     "protractor": "~7.0.0",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 8.1.0.",
   "main": "karma.conf.js",
